content section align/position issue fix for portfolio and contact pages

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -29,7 +29,7 @@ header {
 	padding-bottom: 10px;
 	font-size: 10px;
 	height: 75px;
-	width: 100%
+	width: 100%;
 	font-family: 'Arial', 'Helvetica Neue', Helvetica, sans-serif;
 }
 
